<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewContactActivity">

    <EditText
        android:id="@+id/edittext_new_contact_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_contact_nickname"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_new_contact_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_contact_fullname"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_contact_nickname" />


    <EditText
        android:id="@+id/edittext_new_contact_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_new_contact_phonenumber"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_contact_fullname" />

    <Button
        android:id="@+id/btn_create_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_create_new_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_contact_phonenumber" />

</androidx.constraintlayout.widget.ConstraintLayout>