<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ContactsActivity">

    <TextView
        android:id="@+id/textview_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/text_message"
        android:textSize="20dp"
        android:textColor="@color/darkPink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/textview_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_message" />

    <TextView
        android:id="@+id/textview_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:textAlignment="center"
        android:textColor="@color/darkPink"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_contacts" />

    <TextView
        android:id="@+id/textview_details_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textColor="@color/darkPink"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_details" />

    <Button
        android:id="@+id/btn_create_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="180dp"
        android:text="@string/button_create_new_contact"
        app:layout_constraintTop_toBottomOf="@+id/spinner_contacts" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/button_call"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>